Fix dummy covers for xrflight

--- a/styles/xrflight/style.css
+++ b/styles/xrflight/style.css
@@ -62,7 +62,7 @@ a:hover {
 	width: 167px;
 	border-width: 1px;
 	border-style: solid;
-	background-color: #222222;
+	background-color: #CCCCCC;
 	font-variant: small-caps;
 	display: table-cell;
 	vertical-align: middle;
